--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "express": "4.13.4",
     "socket.io": "1.4.6",
-    "mysql": "2.14.1"
+    "temporary-email-address-validator": "1.0.3",
   }  
 }
