--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "express": "4.13.4",
     "socket.io": "1.4.6",
-    "temporary-email-address-validator": "1.0.3"
+    "temporary-email-address-validator": "1.0.3",
+    "xhr-request":"1.0.1"
   }  
 }
